  objects from 'Configure application' dialog. (RFB)
- desk/deskapp.c: Code cleanup: use sprintf() instead of local routines. (RFB)

2012-04-18
- po/de.po: Updated german translations. (THH)
- aes/gemfmalt.c: Changed form_alert so that dialog boxes with only one line
  of text and without icon should be formatted fine, too. (THH)
- bios/screen.c bios/screen.h bios/xbios.c: Added VsetSync(). (RFB)
- bios/screen.c bios/screen.h desk/deskapp.c: Save current rez / video mode
  to EMUDESK.INF. (RFB)

2012-04-19
- desk/deskapp.c: Fix compilation errors caused by previous update. (RFB)

2012-04-20
- aes/geminit.c: Code cleanup: fix comments, remove unused #define. (RFB)
- aes/geminit.c: Code cleanup: eliminate compatibility macros. (RFB)

2012-04-21
- aes/crysbind.h aes/gemsuper.c desk/gembind.c desk/gembind.h: Remove
  appl_bvset() [never used & not Atari TOS]. (RFB)
- aes/gemfslib.c aes/gemfslib.h: Code cleanup: made some globals local. (RFB)
- aes/gemfslib.c: Fix file selector to display complete drive list. (RFB)
- aes/gemfslib.c aes/geminit.c aes/gemsuper.c aes/gemsuper.h: Eliminate
  gl_bvdisk & gl_bvhard globals. (RFB)
- desk/desktop.rsc: Re-enabled Easter Egg (accidentally disabled when
  resource was recreated). (RFB)
- aes/geminit.c aes/deskapp.c: Move initialisation of gl_mnclick to
  app_start(), where it belongs. (RFB)
- aes/geminit.c: Code cleanup: remove no-longer-used code. (RFB)
- aes/geminit.c aes/geminit.h: Code cleanup: make sh_rdinf() local. (RFB)

2012-04-23
- aes/geminit.c: Fix bug: sh_addpath() did not create PATH environment
  variable correctly if it was missing. (RFB)
- aes/gemstart.S: Fix bug: restore original environment ptr on AES
  restart. (RFB)
- aes/geminit.c: Give sh_rdinf() its own buffer to avoid overwriting the
  AES shell buffer during restart. (RFB)

2012-04-24
- aes/geminit.c: Create separate buffer for desktop environment (avoid
  sharing AES shell buffer). (RFB)