@@ -28,6 +28,7 @@ void gsx_ncode(WORD code, WORD n, WORD m);
 void gsx_1code(WORD code, WORD value);
 
 void gsx_wsclose(void);
+void gsx_wsclear(void);
 
 void ratinit(void);
 void ratexit(void);
